namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mssql
  labels:
    name: mssql
