service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: mssql 
  labels:
    app: mssql  
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  selector:
    app: mssql
